force-app/main/default/objects/Case/fields/Case_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Reason__c</fullName>
    <label>Case Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>FLEXcon</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Escalated to SysAid</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
                <isActive>false</isActive>
                <label>Junk</label>
            </value>
            <value>
                <fullName>Opened as Opportunity (email to case)</fullName>
                <isActive>false</isActive>
                <label>Opened as Opportunity (email to case)</label>
            </value>
            <value>
                <fullName>Resolved no complaint</fullName>
                <isActive>false</isActive>
                <label>Resolved no complaint</label>
            </value>
            <value>
                <fullName>Resolved with complaint</fullName>
                <isActive>false</isActive>
                <label>Resolved with complaint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>