force-app/main/default/objects/Case/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Adhesion</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Co-assemble</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Converting</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Email to Case</fullName>
                <default>true</default>
                <label>Email to Case</label>
            </value>
            <value>
                <fullName>ERP Data Sync</fullName>
            </value>
            <value>
                <fullName>Expedite Denied</fullName>
            </value>
            <value>
                <fullName>Forecasts</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
                <label>Invoice/Pricing</label>
            </value>
            <value>
                <fullName>Late Order</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Log-in</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order/Acknowledgment</fullName>
                <label>Order Entry</label>
            </value>
            <value>
                <fullName>Outlook/Inbox</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Shipping Error</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Waiting for Material</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>