force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Break-Fix</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Product Problem/Technical Guidance</fullName>
                <color>#33FF33</color>
                <label>Product Related</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Service Related Issue/Inquiry</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Service Related</label>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
                <isActive>false</isActive>
                <label>Workmanship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>