force-app/main/default/objects/Case/fields/FLX__c.field-meta.xml
<CustomField>
    <fullName>FLX__c</fullName>
    <label>FLX #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>