force-app/main/default/objects/Case/fields/Manager_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manager_Flag__c</fullName>
    <formula>Owner:User.ManagerId  = $User.Id</formula>
    <label>Manager Flag</label>
    <type>Checkbox</type>
</CustomField>