force-app/main/default/objects/Case/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>