force-app/main/default/objects/Case/fields/Vax_complaint_issued__c.field-meta.xml
<CustomField>
    <fullName>Vax_complaint_issued__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>FYI: If this box is checked, it has a Vax complaint tied to it.</inlineHelpText>
    <label>Vax complaint issued</label>
    <type>Checkbox</type>
</CustomField>