force-app/main/default/objects/Case/fields/Vax_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Vax_Complaint_Number__c</fullName>
    <label>Vax Complaint Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>