force-app/main/default/objects/Case/recordTypes/Customer_Support.recordType-meta.xml
<RecordType>
    <fullName>Customer_Support</fullName>
    <active>true</active>
    <businessProcess>FLEXcon Support Process</businessProcess>
    <description>Case record type for Customer Support Cases</description>
    <label>Customer Support</label>
</RecordType>