force-app/main/default/objects/Case/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <businessProcess>FLEXcon Internal Support</businessProcess>
    <description>Case record type for Internal Cases</description>
    <label>Internal</label>
</RecordType>