force-app/main/default/objects/Case/listViews/Compliance.listView-meta.xml
<ListView>
    <fullName>Compliance</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Compliance</value>
    </filters>
    <label>Compliance</label>
    <sharedTo>
        <group>Compliance</group>
    </sharedTo>
</ListView>