force-app/main/default/objects/Case/listViews/Escalated_to_SysAid.listView-meta.xml
<ListView>
    <fullName>Escalated_to_SysAid</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Subtype__c</columns>
    <columns>Case_Requestor__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal</value>
    </filters>
    <filters>
        <field>Case_Closed_Reason__c</field>
        <operation>equals</operation>
        <value>Escalated to SysAid</value>
    </filters>
    <label>Escalated to SysAid</label>
    <sharedTo>
        <group>Power_Users</group>
    </sharedTo>
</ListView>