force-app/main/default/objects/Case/listViews/Flexcon_Support_Case.listView-meta.xml
<ListView>
    <fullName>Flexcon_Support_Case</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Vax_complaint_issued__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Flexcon Support</label>
    <queue>Flexcon_Support</queue>
</ListView>