force-app/main/default/objects/Case/listViews/My_Cases_Based_on_Case_Team.listView-meta.xml
<ListView>
    <fullName>My_Cases_Based_on_Case_Team</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <label>My Cases Based on Case Team</label>
</ListView>