force-app/main/default/objects/Case/listViews/My_Open_Internal_Cases.listView-meta.xml
<ListView>
    <fullName>My_Open_Internal_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,On Hold</value>
    </filters>
    <label>My Open Internal Cases</label>
    <sharedTo>
        <group>Power_Users</group>
    </sharedTo>
</ListView>