force-app/main/default/objects/Case/listViews/Open_Cases_Based_on_Cases_Team.listView-meta.xml
<ListView>
    <fullName>Open_Cases_Based_on_Cases_Team</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,On Hold,Escalated,In Progress</value>
    </filters>
    <label>Open Cases (Based on Cases Team)</label>
</ListView>