force-app/main/default/objects/Case/listViews/Open_Internal_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Internal_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Subtype__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Requestor__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>Open Internal Cases</label>
    <sharedTo>
        <group>Power_Users</group>
    </sharedTo>
</ListView>