force-app/main/default/objects/Case/listViews/Tier_1_Support_Case.listView-meta.xml
<ListView>
    <fullName>Tier_1_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Tier 1 Support</label>
    <queue>Tier_1_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>